--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^3.0.1",
     "@strapi/plugin-color-picker": "^4.25.11",
+    "@strapi/plugin-documentation": "^4.25.11",
     "@strapi/plugin-i18n": "4.25.11",
     "@strapi/plugin-seo": "^1.9.9",
     "@strapi/plugin-users-permissions": "4.25.11",
