--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {},
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^3.0.1",
+    "@retikolo/drag-drop-content-types": "^1.7.1",
     "@strapi/plugin-color-picker": "^4.25.11",
     "@strapi/plugin-documentation": "^4.25.11",
     "@strapi/plugin-i18n": "4.25.11",
@@ -31,6 +32,10 @@
     "strapi-advanced-uuid": "^1.3.0",
     "strapi-blurhash": "^1.3.0",
     "strapi-plugin-all-in-one-accessibility": "^1.0.13",
+    "strapi-plugin-duplicate-button": "^1.3.16",
+    "strapi-plugin-ezforms": "^0.1.7",
+    "strapi-plugin-menus": "^1.6.1",
+    "strapi-plugin-preview-button": "^2.2.2",
     "strapi-plugin-sitemap": "^3.2.0",
     "styled-components": "5.3.3"
   },
